static/style.css
body {
    margin: 0;
    font-family: 'Segoe UI', sans-serif;
    background: #f5f6fa;
}

/* LOGIN */
.login-body {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

.login-box {
    background: white;
    padding: 40px;
    border-radius: 12px;
    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
}

.login-box input {
    display: block;
    margin: 10px 0;
    padding: 10px;
    width: 100%;
}

/* SIDEBAR */
.sidebar {
    position: fixed;
    width: 220px;
    height: 100vh;
    background: #111827;
    color: white;
    padding: 20px;
}

.sidebar a {
    display: block;
    color: white;
    text-decoration: none;
    margin: 10px 0;
}

/* MAIN */
.main {
    margin-left: 240px;
    padding: 20px;
}

/* CARDS */
.grid {
    display: flex;
    gap: 15px;
}

.card {
    background: white;
    padding: 20px;
    border-radius: 15px;
    flex: 1;
    box-shadow: 0 5px 15px rgba(0,0,0,0.08);
}

/* DARK MODE */
.dark-mode {
    background-color: #0f172a !important;
    color: white !important;
    min-height: 100vh;
}

.dark-mode * {
    color: white !important;
}

